--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Changes in synthPop version 0.1.4
+  * starting to use new classes 'sampleObj', 'popObj' and 'synthPopObj' for the entire package
+
+  * various fixes and improvements such as a new c++ implementation of calibVars()
+
+  * cleanup dependencies in DESCRIPTION and NAMESPACE
+
+  * remove method 'liblinear' from simCategorical() - has never really worked
+
 Changes in synthPop version 0.1.3
   * parallelize simRelevation() on non-windows platforms
 
@@ -36,4 +45,4 @@ Changes in synthPop version 0.1.0
   + update Citation
 
   + new methods for simCategorical (naivebayes, ctree and liblinear)
-    
+
