--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in synthPop version 0.1.7
+  * parallel-computing on windows-platforms using doParallel-package
+
+  * removed spTable.formula method (did not work correctly, anyway)
+
 Changes in synthPop version 0.1.6
   * removed method 'ctree' from simCategorical() -> perhaps add it later
 
