--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ Changes in synthPop version 0.1.8
 
   * fixed man files for spBwplot() and spBwplotStats()
 
+  * updated calibPop() so that the function uses and returns objects of class 'synthPopObj'
+
 Changes in synthPop version 0.1.7
   * parallel-computing on windows-platforms using doParallel-package
 
