--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ Changes in synthPop version 0.1.8
 
   * updated calibPop() so that the function uses and returns objects of class 'synthPopObj'
 
+  * auxData()-methods to query/set 'sample' slot in 'synthPopObj'-objects
+
 Changes in synthPop version 0.1.7
   * parallel-computing on windows-platforms using doParallel-package
 
