--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 Changes in synthPop version 0.1.9
+  * updated example for ipu
   * whipple index (original and modified) included
   * sprague index included
   * simInitSpatial() to generate districts from a broader region
