--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in simPop version 0.2.13
+  * bug in simContinuous solved
+  * simStructure now works also when no stratification variable is specified
+
 Changes in simPop version 0.2.12
   * adding some utility functions for the sga-project that are not exported
   * improve simContinuous() in order to allow to specify the model that should be used for estimation.
