--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Changes in simPop version 0.5.0
+  * The modified whipple index is now computed correctly
+  * Weighting is now available directly in the whipple function
+  * ranger is available in simCategorical
 Changes in simPop version 0.3.0
   * new function ipu2 (more flexible variant for ipu, still in development)
   * new function kishFactor (computation of the Kish factor for sample weights)
