--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in simPop version 0.6.2
+  * Updated function simInitSpatial (it now works with household and/or person counts per subregion)
+  * Moved repo to https://github.com/statistikat/simPop from previous private git repo
 Changes in simPop version 0.5.0
   * The modified whipple index is now computed correctly
   * Weighting is now available directly in the whipple function
