remove ipu2 and kishFactor, surveysd as suggest

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Changes in simPop version 2.1.0
+  * the deprecated functions ipu2 and kishFactor are removed
+  
 Changes in simPop version 1.2.0
   * simRelation now works with sp-called basic variables
 
